Added support for "-I" import file search paths to mojom_bindings_generator and updated the build to use them.
By default mojom_bindings_generator.gypi just specifies -I<ROOT>/mojo/services/public/interfaces. A longer list of include paths can be specified by defining the mojom_import_args variable. See mojo_services.gypi for an example.

Review URL: https://codereview.chromium.org/341363002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@279473 0039d316-1c4b-4281-b951-d872f2087c98


CrOS-Libchrome-Original-Commit: b9c5d7432e017c5f8837c3c06e716d45a9e372ac

--- a/mojo/public/tools/bindings/mojom.gni
+++ b/mojo/public/tools/bindings/mojom.gni
@@ -72,6 +72,7 @@ template("mojom") {
       "{{source}}",
       "--use_chromium_bundled_pylibs",
       "-d", rebase_path("//", root_build_dir),
+      "-I", rebase_path("//", root_build_dir),
       "-o", rebase_path(target_gen_dir, root_build_dir),
     ]
   }
