Adding dependency from content/common:mojo_bindings to service_provider.
TBR=brettw@chromium.org

Review URL: https://codereview.chromium.org/343383004

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@280627 0039d316-1c4b-4281-b951-d872f2087c98


CrOS-Libchrome-Original-Commit: e205123393c9da0120b17fb5c9df8e70e5693ed3

--- a/mojo/public/tools/bindings/mojom.gni
+++ b/mojo/public/tools/bindings/mojom.gni
@@ -87,5 +87,8 @@ template("mojom") {
       ":$generator_target_name",
       "//mojo/public/cpp/bindings",
     ]
+    if (defined(invoker.deps)) {
+      deps += invoker.deps
+    }
   }
 }
