[Mojo] Add support for HTML imports as well as AMD modules
This CL teaches the mojom generator how to package JavaScript generated from
mojom both as AMD modules as an HTML imports.

R=hansmuller@chromium.org

Review URL: https://codereview.chromium.org/643323002

Cr-Commit-Position: refs/heads/master@{#299310}


CrOS-Libchrome-Original-Commit: d1045a6133a372e40638457a5ab5189e139f07d5

--- a/mojo/public/tools/bindings/mojom.gni
+++ b/mojo/public/tools/bindings/mojom.gni
@@ -59,7 +59,9 @@ template("mojom") {
     "$generator_root/generators/java_templates/struct_definition.tmpl",
     "$generator_root/generators/js_templates/enum_definition.tmpl",
     "$generator_root/generators/js_templates/interface_definition.tmpl",
-    "$generator_root/generators/js_templates/module.js.tmpl",
+    "$generator_root/generators/js_templates/module.amd.tmpl",
+    "$generator_root/generators/js_templates/module.html.tmpl",
+    "$generator_root/generators/js_templates/module_definition.tmpl",
     "$generator_root/generators/js_templates/struct_definition.tmpl",
     "$generator_root/generators/python_templates/module_macros.tmpl",
     "$generator_root/generators/python_templates/module.py.tmpl",
