--- a/mojo/public/tools/bindings/mojom.gni
+++ b/mojo/public/tools/bindings/mojom.gni
@@ -122,7 +122,7 @@ template("mojom") {
       "--use_chromium_bundled_pylibs",
       "-d", rebase_path("//", root_build_dir),
       "-I", rebase_path("//", root_build_dir),
-      "-o", "{{source_gen_dir}}",
+      "-o", rebase_path(root_gen_dir),
     ]
   }
 
